plugins {
	id 'fabric-loom' version '1.6-SNAPSHOT'
	id 'maven-publish'
}

archivesBaseName = project.archives_base_name
version = project.mod_version
group = project.maven_group

repositories {
	maven {
		url 'https://maven.terraformersmc.com/releases/'
		content {
			includeGroup("com.terraformersmc")
		} 
	}

	maven {
        url 'https://api.modrinth.com/maven'
        content {
            includeGroup("maven.modrinth")
        }
	}

	maven {
        url = uri("https://maven.pkg.github.com/kerudion/CrowdinTranslate")
		credentials {
            username = System.getenv("USERNAME")
            password = System.getenv("GITHUB_TOKEN")
        }
	}

	mavenCentral()
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	modImplementation "net.fabricmc.fabric-api:fabric-api-base:${project.fabric_api_version}"
	modImplementation "maven.modrinth:sodium:${project.sodium_version}"
	modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
	modImplementation "maven.modrinth:iris:${project.iris_version}"

	modImplementation "de.guntram.mcmod:crowdin-translate:${project.crowdin_translate_version}"
    include "de.guntram.mcmod:crowdin-translate:${project.crowdin_translate_version}"

	include "com.moandjiezana.toml:toml4j:${project.toml4j_version}"
	implementation "com.moandjiezana.toml:toml4j:${project.toml4j_version}"

	implementation "io.github.douira:glsl-transformer:${project.glsl_transformer_version}"
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.archivesBaseName}"}
	}
}
